--- a/CityExperWeb/Views/SatilikTasinmaz/Raporlama.cshtml
+++ b/CityExperWeb/Views/SatilikTasinmaz/Raporlama.cshtml
@@ -4,7 +4,6 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <!-- Meta, title, CSS, favicons, etc. -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,9 +15,6 @@
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
-    @*<link href="~/Assets/dashboard/vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet" />*@
-    @*<link href="~/Assets/dashboard/vendors/nprogress/nprogress.css" rel="stylesheet">*@
-    @*<link href="~/Assets/dashboard/vendors/iCheck/skins/flat/green.css" rel="stylesheet">*@
 
     <style>
 
@@ -92,24 +88,23 @@
 
                             <ul class="nav side-menu">
                                 <li>
-                                    <a href="/anasayfa"><i class="fa fa-globe" aria-hidden="true"></i> Map</a>
+                                    <a href="/anasayfa"><i class="fa fa-globe" aria-hidden="true"></i>Harita Gayrimenkul Dağılımı</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fa fa-street-view" aria-hidden="true"></i>Konumum</a>
-                                </li>
-
-                                <li>
-                                    <a class="nav-link" href="#"><i class="fa fa-calendar-o" aria-hidden="true"></i>Günlük Takip Görünümü</a>
+                                    <a href="#"><i class="fa fa-street-view" aria-hidden="true"></i>Anlık Konum</a>
                                 </li>
                                 <li>
                                     <a class="nav-link" href="@Url.Action("Tasinmaz","Yonetim")"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Gayrimenkul Ekle</a>
                                 </li>
                                 <li>
-                                    <a><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Gayrimenkul Durumu<span class="fa fa-chevron-down"></span></a>
+                                    <a><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Gayrimenkul<span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
-                                        <li><a href="#">Güncel Durum</a></li>
-                                        <li><a href="#">Kira Kontrat Durumu</a></li>
-                                        <li><a href="#">deneme</a></li>
+                                        <li><a href="#">Ödeme Durumu</a></li>
+                                        <li><a href="#">Tahsilat Durumu</a></li>
+                                        <li><a href="#">Gider Türü</a></li>
+                                        <li><a href="#">Düzenleme Tarihi</a></li>
+                                        <li><a href="#">Vade Tarihi</a></li>
+                                        <li><a href="#">Katagori</a></li>
                                     </ul>
                                 </li>
                                 <li>
@@ -122,37 +117,35 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a><i class="fa fa-building-o" aria-hidden="true"></i> Firma Bilgileri <span class="fa fa-chevron-down"></span></a>
-                                    <ul class="nav child_menu">
-                                        <li><a href="#">Firma İsmi</a></li>
-                                        <li><a href="#">Firma Hakkında</a></li>
-                                        <li><a href="#">Kurucular</a></li>
-                                    </ul>
+                                    <a class="nav-link" href="#"><i class="fa fa-calendar-o" aria-hidden="true"></i>Günlük Takip Görünümü</a>
+                                </li>
+                                <li>
+                                    <a><i class="fa fa-building-o" aria-hidden="true"></i> Firma Bilgileri</a>
                                 </li>
                                 @*<li>
-            <a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
-            <ul class="nav child_menu">
-                <li><a href="#">Tables</a></li>
-                <li><a href="#">Table Dynamic</a></li>
-            </ul>
-        </li>
-        <li>
-            <a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
-            <ul class="nav child_menu">
-                <li><a href="chartjs.html">Chart JS</a></li>
-                <li><a href="chartjs2.html">Chart JS2</a></li>
-                <li><a href="morisjs.html">Moris JS</a></li>
-                <li><a href="echarts.html">ECharts</a></li>
-                <li><a href="other_charts.html">Other Charts</a></li>
-            </ul>
-        </li>
-        <li>
-            <a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
-            <ul class="nav child_menu">
-                <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                <li><a href="fixed_footer.html">Fixed Footer</a></li>
-            </ul>
-        </li>*@
+                                        <a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
+                                        <ul class="nav child_menu">
+                                            <li><a href="#">Tables</a></li>
+                                            <li><a href="#">Table Dynamic</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+                                        <ul class="nav child_menu">
+                                            <li><a href="chartjs.html">Chart JS</a></li>
+                                            <li><a href="chartjs2.html">Chart JS2</a></li>
+                                            <li><a href="morisjs.html">Moris JS</a></li>
+                                            <li><a href="echarts.html">ECharts</a></li>
+                                            <li><a href="other_charts.html">Other Charts</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
+                                        <ul class="nav child_menu">
+                                            <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
+                                            <li><a href="fixed_footer.html">Fixed Footer</a></li>
+                                        </ul>
+                                    </li>*@
                             </ul>
                         </div>
                         <div class="menu_section">
@@ -377,14 +370,15 @@
                             </div>
 
                             <div class="col-md-8">
-                                <div id="chart_plot_01" class="demo-placeholder"></div>
+                                <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto;padding: 0 15px;"></div>
+                                @*<div id="chart_plot_01" class="demo-placeholder"></div>*@
                             </div>
                             <div class="col-md-4 bg-white">
                                 <div class="x_title">
                                     <h2>Hatırlatmalar <small></small></h2>
                                     <div class="clearfix">Adet</div>
                                 </div>
-                                <div id="container" style="min-width: 310px; max-width: 500px; height: 400px; margin: 0 auto"></div>
+                                <div id="container2" style="min-width: 310px; max-width: 500px; height: 400px; margin: 0 auto"></div>
 
                                 @*<div class="col-md-12 col-sm-12 col-xs-12">
                                         <div>
@@ -807,8 +801,11 @@
     <script src="~/Assets/js/winter-flat.js"></script>
     <script src="~/Assets/libraries/owl.carousel/owl.carousel.min.js"></script>
     <script src="~/Assets/js/markerclusterer.js"></script>
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script>
-        Highcharts.chart('container', {
+        Highcharts.chart('container2', {
             chart: {
                 type: 'bar'
             },
@@ -841,6 +838,45 @@
             }, {
                 name: 'Ödemesi yapılmamış gayrimenkul sayısı',
                 data: [3, 4, 4, 2, 5]
+            }]
+        });
+
+
+
+        Highcharts.chart('container', {
+            chart: {
+                type: 'line'
+            },
+            title: {
+                text: 'Gayrimenkul Emlak Endeksi'
+            },
+            subtitle: {
+                text: 'Eylül 2019 Ortalaması: ****** TL'
+            },
+            xAxis: {
+                categories: ['Ockak', 'Şubat', 'Mart', 'Nissan', 'Mayıs', 'Haziran', 'Temmuz', 'Ağustos', 'Eylül', 'Ekim', 'Kasım', 'Aralık']
+            },
+            yAxis: {
+
+                title: {
+                    text: 'Fiyat(TL)'
+                },
+                
+            },
+            plotOptions: {
+                line: {
+                    dataLabels: {
+                        enabled: true
+                    },
+                    enableMouseTracking: false
+                }
+            },
+            series: [{
+                name: 'Ekim 2019',
+                data: [7.0, 6.9, 9.5, 14.5, 18.4, 21.5, 25.2, 26.5, 23.3, 18.3, 13.9, 9.6]
+            }, {
+                name: 'Eylül 2019',
+                data: [3.9, 4.2, 5.7, 8.5, 11.9, 15.2, 17.0, 16.6, 14.2, 10.3, 6.6, 4.8]
             }]
         });
     </script>
